--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ img {
 
 /*=== VARIABLES ===*/
 :root {
+  --header-height: 4.5rem;
+
   --hue: 159;
   /* HSL color mode */
   --base-color: hsl(var(--hue) 36% 57%);
@@ -57,29 +59,16 @@ h1 {
   background: var(--base-color-alt);
 }
 
+.divider-1 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 36%, 57%, 1) 0% hsla(var(--hue), 65%, 88%, 0.34) 100%
+  );
+}
+
 /*=== LAYOUT ===*/
-#header {
-  border-bottom: 1px solid #e4e4e4;
-}
-
-nav {
-  height: 4.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.logo {
-  font: 700 1.31rem 'Poppins', sans-serif;
-  color: var(--title-color);
-}
-
-.logo span {
-  color: var(--base-color);
-}
-
 .container {
-  width: 100%;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
@@ -93,7 +82,45 @@ nav {
   padding: 5rem 0;
 }
 
+#header {
+  border-bottom: 1px solid #e4e4e4;
+  margin-bottom: 2rem;
+  display: flex;
+
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: var(--body-color);
+}
+
+nav {
+  height: var(--header-height);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.logo {
+  font: 700 1.31rem 'Poppins', sans-serif;
+  color: var(--title-color);
+}
+
+.logo span {
+  color: var(--base-color);
+}
+
+main {
+  margin-top: var(--header-height);
+}
+
 /*=== HOME ===*/
+#home {
+  overflow: hidden;
+}
+
 #home .container {
   margin: 0;
 }
@@ -135,4 +162,5 @@ nav {
 
 #home .text p {
   margin-bottom: 2rem;
+  max-width: 100%;
 }
