--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   text-decoration: none;
 }
@@ -121,12 +125,36 @@ nav {
 nav ul li {
   text-align: center;
 }
+nav ul li a {
+  transition: color 0.2s;
+  position: relative;
+}
+nav ul li a:hover {
+  color: var(--base-color);
+}
+
+nav ul li a::after {
+  content: '';
+  width: 00%;
+  height: 2px;
+  background: var(--base-color);
+  position: absolute;
+  left: 0;
+  bottom: -1.5rem;
+
+  transition: width 0.2s;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+}
 
 nav .menu {
   opacity: 0;
   visibility: hidden;
 }
 
+/*Mostrar menu*/
 nav.show .menu {
   opacity: 100;
   visibility: visible;
@@ -137,6 +165,15 @@ nav.show .menu {
   position: fixed;
   top: 0;
   left: 0;
+}
+
+nav.show .menu {
+  display: grid;
+  place-content: center;
+}
+
+nav.show ul.grid {
+  gap: 4rem;
 }
 
 /*=== HOME ===*/
